--- a/style.css
+++ b/style.css
@@ -10,7 +10,14 @@ body {
 border: solid 10px;
 text-align:center;
 min-height: 700px;
+animation: anim3 2s infinite alternate;
 }
+@keyframes anim3{
+    0%{border-radius: 20px;}
+    100%{border-radius: 60px;}
+
+    
+} 
 
 .btn{
     border:none;
@@ -23,7 +30,7 @@ min-height: 700px;
     background: lightgreen ;
 }
 
-.game h3
+.game h2
 {
 padding: 10px;
 background:black;
@@ -98,14 +105,34 @@ text-align: center;
     margin: 10px;
 }
 
-.deck{
-    float:left;
-    background: white;
-    color: #222;
-    padding: 10px;
-    border-radius:10px;
-    border: double 5px;
+#deck{
+    width: 100px;
+    height: 150px;
+    background-color: white;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top:0;
+    box-shadow:2px 2px 3px 3px rgb(14, 13, 13);
+    animation: anim 2s infinite alternate;
 }
+@keyframes anim{
+    0%{font-style:italic;}
+    100%{font-style:italic;color:rgb(141, 90, 47);}
+} 
+    
+ #deckcount{
+    margin: 0;
+    text-align: center;
+    padding-top:52px;
+    font-weight: bolder;
+    font-size: xx-large;
+    color: rgb(14, 13, 13);
+    animation: anim2 2s infinite alternate;
+   }
+   @keyframes anim2{
+    0%{font-size: xx-large;}
+    100%{font-size: large;}
+}   
 
 .btn
 {
@@ -127,4 +154,47 @@ text-align: center;
     margin: 0 auto;
     margin-top: 10px;
     display:none;
+}
+#instruction{
+    width: 230px;
+    height: 300px;
+    background-color: saddlebrown;
+    display: inline-block;
+    border-radius: 10px;
+    margin-left: 100px;
+    margin-top: 50px;   
+    position: relative;
+    left: 300px;
+}
+#instruction .info{
+    text-align: center;
+    font-style: italic;
+    font-weight: bold;
+    padding-top: 20px;
+    word-spacing: 2px;
+}
+h3{
+    text-align: center;
+    font-weight: bolder;
+    font-style: italic;
+    margin-top:1px;
+    color: rgb(14, 13, 13);
+    font-size: x-large;
+}
+#rules{
+    width: 240px;
+    height: 280px;
+    background-color: saddlebrown;
+    border-radius: 10px;
+    margin-left: 100px;
+    margin-top: 30px;
+    position: relative;
+    top: -300px;
+    
+}
+#rules p{
+    font-style: italic;
+    font-weight: bold;
+    text-align: center;
+    word-spacing: 3px;
 }
